--- a/source/_static/css/proxyos.css
+++ b/source/_static/css/proxyos.css
@@ -25,6 +25,11 @@ div.bodywrapper {
   margin: 0 0 0 calc(var(--navigation-width) + 30px);
 }
 
+p.logo {
+  display: flex;
+  justify-content: center;
+}
+
 .proxyos-important {
   font-weight: 900;
   font-style: italic;
